--- a/references.bib
+++ b/references.bib
@@ -138,7 +138,7 @@ language={English}
 }
 
 @INPROCEEDINGS{sohan_cisco,
-author={S. M. Sohan and C. Anslow and F. Maurer},
+author={Sohan, SM and Anslow, Craig and Maurer, Frank},
 booktitle={Proc. of IEEE/ACM International Conference on Software Engineering},
 title={Automated Example Oriented {REST} {API} Documentation at Cisco},
 year={2017},
@@ -147,7 +147,7 @@ keywords={Documentation;Industries;Manuals;Production;Tools;Usability;API;Automa
 }
 
 @INPROCEEDINGS{sohan_vlhcc,
-author={S. M. Sohan, Frank Maurer, Craig Anslow and Martin Robillard },
+author={Sohan, SM and Anslow, Craig and Maurer, Frank and Robillard, Martin},
 booktitle={to appear in Proc. of IEEE Symposium on Visual Languages and Human-Centric Computing },
 title={A Study of the Effectiveness of Usage Examples in {REST} {API} Documentation},
 year={2017},
