--- a/introduction.tex
+++ b/introduction.tex
@@ -41,23 +41,60 @@ Currently, the process of documenting REST APIs is largely manual. Conceptually,
 
 The steps S1-S6 are repeated for every API action that needs to be documented, and S1-S7 need to repeated for every version of the REST API as it evolves. As depicted here, this manual process can be both time consuming and error-prone.
 
+\section{Research Goals}
 The overarching goal of my research was to improve the current state of REST API documentation process by automating the repeating manual steps in the aforementioned workflow. More specifically, I aimed to solve the following research goals:
 
 \begin{itemize}
-  \item G1: To identify a set of REST API documentation requirements.
-  \item G2: To develop and evaluate a technique to overcome the commonly observed but unresolved challenges related to REST API documentation.
+  \item RG1: To identify a set of REST API documentation requirements. Existing research on API usability has derived a number of API documentation requirements primarily focusing on local APIs. Due to the structural and implementation differences between local and REST APIs, I aimed to identity REST API specific documentation requirements in my research. This has several implicatons as follows: having access to a scientifically derived list of REST API documentation requirements allows REST API developers to make an informed decision related to planing and execution of their documentation efforts. The requirements provide a background research that can be used by practitioners to compare and contrast existing REST API documentation tools while selecting an appropriate tool for their API. REST API documentation tool developers can also use the requirements to build necessary features.
+  \item RG2: To develop and evaluate a technique to overcome the commonly observed but unresolved challenges related to REST API documentation. I aimed to devise a reusable technique so that REST APIs can be documented following the identified REST API documentation requirements without following manual or bespoke methods. It has the following implications: REST API developers can utilize the technique to overcome the common challenges with the generation and maintenance of their API documentation. REST API client developers can access a usable API documentation.
 \end{itemize}
 
-To reach these goals, I have followed a strategy involving five smaller research projects as follows. The first research project, related to G1, is described in Chapter~\ref{chapter:case_study}, where I discuss a case study to summarize the state of existing literature and industry practices related to the versioning, documentation, and change communication patterns of evolving Web APIs \cite{sohan2015case}. The results are based on a study of nine industrical APIs selected based on their diverse application domains, maturity level, and popularity including both open and closed source implementations. The primary findings from this study are as follows: Web APIs evolve frequently, often several times a week, including both compatible and incompatible API changes, using manual or bespoke methods to version, document, and communicate the changes as they evolve. I found a lack of reusable techniques in the existing literature to automatically generate and maintain the documentation of multi-version evolving REST APIs with usage examples. I persued further research to solve this problem as discussed in the following paragraphs.
 
-In Chapter~\ref{chapter:spy_rest}, I discuss my second research project, related to both G1 and G2, where I derived a set of REST API documentation requirements and proposed a new technique to satisfy the requirements. Here, I present the following list of REST API documentation requirements by studying the literature and applying the findings from Chapter~\ref{chapter:case_study}: 1) automated, 2) example based, 3) executable, 4) version aware, 5) customizable, 6) reusable, and 7) collaborative \cite{sohan2015spyrest}. I discuss the available REST API documentation techniques that require repeatitive manual efforts to generate and maintain custom formatted API descriptions that fail to satisfy these requirements. I present, SpyREST, a novel technique to intercept example REST API calls using an HTTP proxy server to collect and autmatically synthesize API traffic to generate and update API documentation to satisfy the aforementioned requirements. The primary advantage of the presented technique is that the documentation is generated from executable code. As a result, a continuously updated REST API documentation with realistic usage examples is achievable with a reduced manual effort.
+\section{Research Objectives}
+Related to RG1 and RG2, I aimed to address the following research objectives:
 
-I present my third research project, related to G2, in Chapter~\ref{chapter:demo_paper}, where I present a prototype implementation of the aformentioned technique \cite{sohan2015spyrest_tool}. Here, I demonstrate a reusable tool and compare it against the existing REST API documentation tools that rely on custom API description languages. In this prototype implementation, I discuss the process that transforms a number of example HTTP requests and responses into a usable REST API documentation. I also present an example where automated test code is used to generate and maintain a continuously updated REST API documentation using the developed tool.
+\begin{itemize}
+  \item RO1: How are evolving REST APIs documented? This question is aimed to analyze the gap between current industry practice around the documentation of evolving REST APIs and the proposed solutions from existing literature. This objective helped me to identify the research opportunity to work on unresolved problems related to REST API documentation.
+  \item RO2: What are the requirements for usable REST API documentation? This objective provides a neccessary background work for improving the state of REST API documentation process.
+  \item RO3: What technique can be used to document REST APIs to meet the requirements? This is the central research objective. I researched to develop a new technique that can fill the gap between existing REST API documentation methods and the identified requirements.
+  \item RO4: Is the proposed technique feasible for REST API developers? An evaliation of the proposed technique in a real-world setup is needed to understand the feasibility and the shortcomings of the proposed technique from the perspective of the REST API developers.
+  \item RO5: How does a documentation using the proposed technique impact REST API client developers? This question investigates the impact of the proposed technique from the perspective of the REST API client developers.
+\end{itemize}
 
-I discuss my fourth research project, related to G2, involving an industrial evaluation of the proposed technique and the tool in Chapter~\ref{chapter:cisco_study} \cite{sohan_cisco}. The evaluation is carried out based on the data collected from an eighteen month of production use of SpyREST at Cisco, my current employer. From the study I found that it is feasible to use the proposed interception technique and automated tests to document evolving REST APIs satisfying the previously presented REST API documentation requirements. Automated always-updated REST API documentation was found to help establish a quick feedback cycle among the stakeholders. I also discuss several refinements and limitations of the proposed technique based on the lessons learned from this case study.
+\section{Cohesion and Unitary Report}
+To address the aformentioned research goals and objectives, my research strategy included five sub-projects, result of which have been published as papers in peer-reviewed international venues. Table~\ref{table:chapter_summary} shows a high level overview of the flow of arguments between the sub-projects to meet the research goals.
 
+\begin{table}
+  \caption{Summary and Flow of Arguments of the Sub-projects}
+  \begin{tabular}{|p{1.5cm}|p{1.5cm}|p{1.5cm}|p{4.5cm}|p{6cm}|}
+  \hline
+  Chapter & Goal & Objective & Research Project & Primary Outcome \\
+  \hline
+  Chapter~\ref{chapter:case_study}  & RG1 & RO1 & A case study of Web API evolution \cite{sohan2015case}. & A set of challenging problems related to evolving Web APIs. Selected REST API documentation as the problem of interest for this research. \\
+  \hline
+  Chapter~\ref{chapter:spy_rest} & RG1 and RG2 & RO3 and RO3 & SpyREST: Automated RESTful API documentation using an HTTP proxy server \cite{sohan2015spyrest}. & A list of requirements and the concept of using interception to generate REST API documentation to satisfy the requirements. \\
+  \hline
+  Chapter~\ref{chapter:demo_paper} & RG2 & RO3 & SpyREST in action: An automated RESTful API documentation tool \cite{sohan2015spyrest_tool}. & A reusable tool and a demonstration of the proposed REST API documentation technique. \\
+  \hline
+  Chapter~\ref{chapter:cisco_study} & RG2 & RO4 & Automated example oriented REST API documentation at cisco \cite{sohan_cisco}. & An empirical evidence that the proposed technique is feasible for practical use, and a list of problems for potential future research.\\
+  \hline
+  Chapter~\ref{chapter:controlled_study} & RG2 & RO5 & A study of the effectiveness of usage examples in REST API documentation \cite{sohan_vlhcc}. & An empirical evidence that REST API client developers can overcome common obstacles when the documentation contains usage examples, as suggested in the proposed technique.\\
+  \hline
+\end{tabular}
+\label{table:chapter_summary}
+\end{table}
 
-I present my fifth research project, related to G2, in Chapter~\ref{chapter:controlled_study}, where I discuss a controlled study to undestand the impact of usage examples in API documentation on REST API client developers \cite{sohan_vlhcc}. I recruited a total of 26 professional software engineers with REST API experience for this study. I mapped the participants into two groups and introduced usage examples as the control variable. I enhanced an existing REST API documentation with new usage examples. I gave the enhanced API documentation to participants from one of the study groups. I found that participants using the original documentation without usage examples faced common obstacles related to using appropriate data types, data formats, and required elements in the HTTP headers and request body. I observed that providing usage examples with data taken from API test code reduces the obstacles and improves API client developer success rate, reduces required trial attempts, and improves satisfaction ratings. The findings from this study provides an empirical evidence that by using the proposed technique of generating REST API documentation from API test code can help API client developers to achive a higher level of success with a reduced effort.
+The first research project, related to RG1, is described in Chapter~\ref{chapter:case_study}, where I discuss a case study to summarize the state of existing literature and industry practices related to the versioning, documentation, and change communication patterns of evolving Web APIs \cite{sohan2015case}. The results are based on a study of nine industrical APIs selected based on their diverse application domains, maturity level, and popularity including both open and closed source implementations. The primary findings from this study are as follows: Web APIs evolve frequently, often several times a week, including both compatible and incompatible API changes, using manual or bespoke methods to version, document, and communicate the changes as they evolve. I found a lack of reusable techniques in the existing literature to automatically generate and maintain the documentation of multi-version evolving REST APIs with usage examples. I persued further research to solve this problem as discussed in the following paragraphs.
+
+In Chapter~\ref{chapter:spy_rest}, I discuss my second research project, related to both RG1 and RG2, where I derived a set of REST API documentation requirements and proposed a new technique to satisfy the requirements. Here, I present the following list of REST API documentation requirements by studying the literature and applying the findings from Chapter~\ref{chapter:case_study}: 1) automated, 2) example based, 3) executable, 4) version aware, 5) customizable, 6) reusable, and 7) collaborative \cite{sohan2015spyrest}. I discuss the available REST API documentation techniques that require repeatitive manual efforts to generate and maintain custom formatted API descriptions that fail to satisfy these requirements. I present, SpyREST, a novel technique to intercept example REST API calls using an HTTP proxy server to collect and autmatically synthesize API traffic to generate and update API documentation to satisfy the aforementioned requirements. The primary advantage of the presented technique is that the documentation is generated from executable code. As a result, a continuously updated REST API documentation with realistic usage examples is achievable with a reduced manual effort.
+
+I present my third research project, related to RG2, in Chapter~\ref{chapter:demo_paper}, where I present a prototype implementation of the aformentioned technique \cite{sohan2015spyrest_tool}. Here, I demonstrate a reusable tool and compare it against the existing REST API documentation tools that rely on custom API description languages. In this prototype implementation, I discuss the process that transforms a number of example HTTP requests and responses into a usable REST API documentation. I also present an example where automated test code is used to generate and maintain a continuously updated REST API documentation using the developed tool.
+
+I discuss my fourth research project, related to RG2, involving an industrial evaluation of the proposed technique and the tool in Chapter~\ref{chapter:cisco_study} \cite{sohan_cisco}. The evaluation is carried out based on the data collected from an eighteen month of production use of SpyREST at Cisco, my current employer. From the study I found that it is feasible to use the proposed interception technique and automated tests to document evolving REST APIs satisfying the previously presented REST API documentation requirements. Automated always-updated REST API documentation was found to help establish a quick feedback cycle among the stakeholders. I also discuss several refinements and limitations of the proposed technique based on the lessons learned from this case study.
+
+I present my fifth research project, related to RG2, in Chapter~\ref{chapter:controlled_study}, where I discuss a controlled study to undestand the impact of usage examples in API documentation on REST API client developers \cite{sohan_vlhcc}. I recruited a total of 26 professional software engineers with REST API experience for this study. I mapped the participants into two groups and introduced usage examples as the control variable. I enhanced an existing REST API documentation with new usage examples. I gave the enhanced API documentation to participants from one of the study groups. I found that participants using the original documentation without usage examples faced common obstacles related to using appropriate data types, data formats, and required elements in the HTTP headers and request body. I observed that providing usage examples with data taken from API test code reduces the obstacles and improves API client developer success rate, reduces required trial attempts, and improves satisfaction ratings. The findings from this study provides an empirical evidence that by using the proposed technique of generating REST API documentation from API test code can help API client developers to achive a higher level of success with a reduced effort.
+
+In Chatper~\ref{chapter:conclusion}, I conclude by discussing how the research goals are achieved and provide a list of problems for future research.
 
 In summary, this thesis makes the following key contributions to the body of research in software engineering:
 
