--- a/introduction.tex
+++ b/introduction.tex
@@ -72,7 +72,7 @@ To address the aformentioned research goals and objectives, my research strategy
   \hline
   Chapter~\ref{chapter:case_study}  & RG1 & RO1 & A case study of Web API evolution \cite{sohan2015case}. & A set of challenging problems related to evolving Web APIs. Selected REST API documentation as the problem of interest for this research. \\
   \hline
-  Chapter~\ref{chapter:spy_rest} & RG1 and RG2 & RO3 and RO3 & SpyREST: Automated RESTful API documentation using an HTTP proxy server \cite{sohan2015spyrest}. & A list of requirements and the concept of using interception to generate REST API documentation to satisfy the requirements. \\
+  Chapter~\ref{chapter:spy_rest} & RG1 and RG2 & RO2 and RO3 & SpyREST: Automated RESTful API documentation using an HTTP proxy server \cite{sohan2015spyrest}. & A list of requirements and the concept of using interception to generate REST API documentation to satisfy the requirements. \\
   \hline
   Chapter~\ref{chapter:demo_paper} & RG2 & RO3 & SpyREST in action: An automated RESTful API documentation tool \cite{sohan2015spyrest_tool}. & A reusable tool and a demonstration of the proposed REST API documentation technique. \\
   \hline
@@ -84,17 +84,17 @@ To address the aformentioned research goals and objectives, my research strategy
 \label{table:chapter_summary}
 \end{table}
 
-The first research project, related to RG1, is described in Chapter~\ref{chapter:case_study}, where I discuss a case study to summarize the state of existing literature and industry practices related to the versioning, documentation, and change communication patterns of evolving Web APIs \cite{sohan2015case}. The results are based on a study of nine industrical APIs selected based on their diverse application domains, maturity level, and popularity including both open and closed source implementations. The primary findings from this study are as follows: Web APIs evolve frequently, often several times a week, including both compatible and incompatible API changes, using manual or bespoke methods to version, document, and communicate the changes as they evolve. I found a lack of reusable techniques in the existing literature to automatically generate and maintain the documentation of multi-version evolving REST APIs with usage examples. I persued further research to solve this problem as discussed in the following paragraphs.
+The first research project is described in Chapter~\ref{chapter:case_study}, where I discuss a case study to summarize the state of existing literature and industry practices related to the versioning, documentation, and change communication patterns of evolving Web APIs \cite{sohan2015case}. The results are based on a study of nine industrical APIs. I found a lack of reusable techniques in the existing literature to automatically generate and maintain the documentation of multi-version evolving REST APIs with usage examples. I persued further research to solve this problem as discussed in the following paragraphs.
 
-In Chapter~\ref{chapter:spy_rest}, I discuss my second research project, related to both RG1 and RG2, where I derived a set of REST API documentation requirements and proposed a new technique to satisfy the requirements. Here, I present the following list of REST API documentation requirements by studying the literature and applying the findings from Chapter~\ref{chapter:case_study}: 1) automated, 2) example based, 3) executable, 4) version aware, 5) customizable, 6) reusable, and 7) collaborative \cite{sohan2015spyrest}. I discuss the available REST API documentation techniques that require repeatitive manual efforts to generate and maintain custom formatted API descriptions that fail to satisfy these requirements. I present, SpyREST, a novel technique to intercept example REST API calls using an HTTP proxy server to collect and autmatically synthesize API traffic to generate and update API documentation to satisfy the aforementioned requirements. The primary advantage of the presented technique is that the documentation is generated from executable code. As a result, a continuously updated REST API documentation with realistic usage examples is achievable with a reduced manual effort.
+In Chapter~\ref{chapter:spy_rest}, I discuss my second research project where I derived a set of REST API documentation requirements and proposed a new technique to satisfy the requirements \cite{sohan2015spyrest}. Here, I present a list of REST API documentation requirements by studying the literature and applying the findings from Chapter~\ref{chapter:case_study}. I discuss the available REST API documentation techniques and compare against the requirements. I present, SpyREST, a novel technique to intercept example REST API calls using an HTTP proxy server to collect and autmatically synthesize API traffic to generate and update API documentation to satisfy the identified requirements. The primary advantage of the presented technique is that the documentation is generated from executable code. As a result, a continuously updated REST API documentation with realistic usage examples is achievable with a reduced manual effort.
 
-I present my third research project, related to RG2, in Chapter~\ref{chapter:demo_paper}, where I present a prototype implementation of the aformentioned technique \cite{sohan2015spyrest_tool}. Here, I demonstrate a reusable tool and compare it against the existing REST API documentation tools that rely on custom API description languages. In this prototype implementation, I discuss the process that transforms a number of example HTTP requests and responses into a usable REST API documentation. I also present an example where automated test code is used to generate and maintain a continuously updated REST API documentation using the developed tool.
+I present my third research project, related to RG2, in Chapter~\ref{chapter:demo_paper}, where I present a prototype implementation of the aformentioned technique \cite{sohan2015spyrest_tool}. In this prototype implementation, I discuss the process that transforms a number of example HTTP requests and responses into a usable REST API documentation. I also present an example where automated test code is used to generate and maintain a continuously updated REST API documentation using the developed tool.
 
 I discuss my fourth research project, related to RG2, involving an industrial evaluation of the proposed technique and the tool in Chapter~\ref{chapter:cisco_study} \cite{sohan_cisco}. The evaluation is carried out based on the data collected from an eighteen month of production use of SpyREST at Cisco, my current employer. From the study I found that it is feasible to use the proposed interception technique and automated tests to document evolving REST APIs satisfying the previously presented REST API documentation requirements. Automated always-updated REST API documentation was found to help establish a quick feedback cycle among the stakeholders. I also discuss several refinements and limitations of the proposed technique based on the lessons learned from this case study.
 
-I present my fifth research project, related to RG2, in Chapter~\ref{chapter:controlled_study}, where I discuss a controlled study to undestand the impact of usage examples in API documentation on REST API client developers \cite{sohan_vlhcc}. I recruited a total of 26 professional software engineers with REST API experience for this study. I mapped the participants into two groups and introduced usage examples as the control variable. I enhanced an existing REST API documentation with new usage examples. I gave the enhanced API documentation to participants from one of the study groups. I found that participants using the original documentation without usage examples faced common obstacles related to using appropriate data types, data formats, and required elements in the HTTP headers and request body. I observed that providing usage examples with data taken from API test code reduces the obstacles and improves API client developer success rate, reduces required trial attempts, and improves satisfaction ratings. The findings from this study provides an empirical evidence that by using the proposed technique of generating REST API documentation from API test code can help API client developers to achive a higher level of success with a reduced effort.
+I present my fifth research project, related to RG2, in Chapter~\ref{chapter:controlled_study}, where I discuss a controlled study to undestand the impact of usage examples in API documentation on REST API client developers \cite{sohan_vlhcc}. I observed that providing usage examples with data taken from API test code reduces the obstacles and improves API client developer success rate, reduces required trial attempts, and improves satisfaction ratings. The findings from this study provides an empirical evidence that by using the proposed technique of generating REST API documentation from API test code can help API client developers to achive a higher level of success with a reduced effort.
 
-In Chatper~\ref{chapter:conclusion}, I conclude by discussing how the research goals are achieved and provide a list of problems for future research.
+In Chatper~\ref{chapter:conclusion}, I conclude by discussing how the research objectives are achieved and provide a list of problems for future research.
 
 In summary, this thesis makes the following key contributions to the body of research in software engineering:
 
