contribution summary is a section

--- a/introduction.tex
+++ b/introduction.tex
@@ -45,8 +45,8 @@ The steps S1-S6 are repeated for every API action that needs to be documented, a
 The overarching goal of my research was to improve the current state of REST API documentation process by automating the repeating manual steps in the aforementioned workflow. More specifically, I aimed to solve the following research goals:
 
 \begin{itemize}
-  \item RG1: To identify a set of REST API documentation requirements. Existing research on API usability has derived a number of API documentation requirements primarily focusing on local APIs. Due to the structural and implementation differences between local and REST APIs, I aimed to identity REST API specific documentation requirements in my research. This has several implicatons as follows: having access to a scientifically derived list of REST API documentation requirements allows REST API developers to make an informed decision related to planing and execution of their documentation efforts. The requirements provide a background research that can be used by practitioners to compare and contrast existing REST API documentation tools while selecting an appropriate tool for their API. REST API documentation tool developers can also use the requirements to build necessary features.
-  \item RG2: To develop and evaluate a technique to overcome the commonly observed but unresolved challenges related to REST API documentation. I aimed to devise a reusable technique so that REST APIs can be documented following the identified REST API documentation requirements without following manual or bespoke methods. It has the following implications: REST API developers can utilize the technique to overcome the common challenges with the generation and maintenance of their API documentation. REST API client developers can access a usable API documentation.
+  \item \textit{RG1: To identify a set of REST API documentation requirements.} Existing research on API usability has derived a number of API documentation requirements primarily focusing on local APIs. Due to the structural and implementation differences between local and REST APIs, I aimed to identity REST API specific documentation requirements in my research. This has several implicatons as follows: having access to a scientifically derived list of REST API documentation requirements allows REST API developers to make an informed decision related to planning and execution of their documentation efforts. The requirements provide a background research that can be used by practitioners to compare and contrast existing REST API documentation tools while selecting an appropriate tool for their API. REST API documentation tool developers can also use the requirements to build necessary features.
+  \item \textit{RG2: To develop and evaluate a technique to overcome the commonly observed but unresolved challenges related to REST API documentation.} I aimed to devise a reusable technique so that REST APIs can be documented following the identified REST API documentation requirements without following manual or bespoke methods. It has the following implications: REST API developers can utilize the technique to overcome the common challenges with the generation and maintenance of their API documentation. REST API client developers can access a usable API documentation.
 \end{itemize}
 
 
@@ -54,11 +54,11 @@ The overarching goal of my research was to improve the current state of REST API
 Related to RG1 and RG2, I aimed to address the following research objectives:
 
 \begin{itemize}
-  \item RO1: How are evolving REST APIs documented? This question is aimed to analyze the gap between current industry practice around the documentation of evolving REST APIs and the proposed solutions from existing literature. This objective helped me to identify the research opportunity to work on unresolved problems related to REST API documentation.
-  \item RO2: What are the requirements for usable REST API documentation? This objective provides a neccessary background work for improving the state of REST API documentation process.
-  \item RO3: What technique can be used to document REST APIs to meet the requirements? This is the central research objective. I researched to develop a new technique that can fill the gap between existing REST API documentation methods and the identified requirements.
-  \item RO4: Is the proposed technique feasible for REST API developers? An evaliation of the proposed technique in a real-world setup is needed to understand the feasibility and the shortcomings of the proposed technique from the perspective of the REST API developers.
-  \item RO5: How does a documentation using the proposed technique impact REST API client developers? This question investigates the impact of the proposed technique from the perspective of the REST API client developers.
+  \item \textit{RO1: How are evolving REST APIs documented?} This question is aimed to analyze the gap between current industry practice around the documentation of evolving REST APIs and the proposed solutions from existing literature. This objective helped me to identify the research opportunity to work on unresolved problems related to REST API documentation.
+  \item \textit{RO2: What are the requirements for usable REST API documentation?} This objective provides a neccessary background work for improving the state of REST API documentation process.
+  \item \textit{RO3: What technique can be used to document REST APIs to meet the requirements?} This is the central research objective. I researched to develop a new technique that can fill the gap between existing REST API documentation methods and the identified requirements.
+  \item \textit{RO4: Is the proposed technique feasible for REST API developers?} An evaliation of the proposed technique in a real-world setup is needed to understand the feasibility and the shortcomings of the proposed technique from the perspective of the REST API developers.
+  \item \textit{RO5: How does a documentation using the proposed technique impact REST API client developers?} This question investigates the impact of the proposed technique from the perspective of the REST API client developers.
 \end{itemize}
 
 \section{Cohesion and Unitary Report}
@@ -96,7 +96,9 @@ I present my fifth research project, related to RG2, in Chapter~\ref{chapter:con
 
 In Chatper~\ref{chapter:conclusion}, I conclude by discussing how the research objectives are achieved and provide a list of problems for future research.
 
+\section{Contributions}
 In summary, this thesis makes the following key contributions to the body of research in software engineering:
+
 
 \begin{enumerate}
   \item A list of REST API documentation requirements derived from the existing literature and the current state of industry practices to be used as a guideline by practitioners and researchers.
